Revision history for Perl extension Bio::Graphics.

2.02 Sun Mar 14 18:44:04 EDT 2010
     - Added a wiggle_whiskers glyph that works nicely with BigWig and
       BigBed data.

2.01 Thu Feb 25 16:46:08 EST 2010
     - Fixed display of alignments that have hard-clipping in their CIGAR strings.

2.00 Wed Jan 20 11:12:13 EST 2010
     - Added the "cross" glyph for DAS compatibility.
     - Fixed the triangle glyph so that DAS stylesheets can set orientation
       properly.	
     - Fixed wiggle_xyplot/density documentation of smoothing options.  
     - Turn off sampling from wiggle loader by default (turn it on with --sample option).
     - Multiple sequence alignment code in the segments glyph has been updated to deal with
       the Samtools case of both reference DNA and target reporting minus strand alignments.
     - It felt like time to go to 2.00.

1.995 Wed Jan  6 10:06:17 EST 2010
      - Fixed the gene glyph so that non-SO genes (gene=>exon without an intervening transcript)
        display properly. Otherwise the exons were bumping.
      - Added support for "featureRGB" and "featureScore" special color names. This provides
        an additional level of UCSC graphics compatibility.

1.994 Thu Dec 10 10:07:19 EST 2009
      - The GFF3 Gap attribute (which contains a CIGAR string) is now supported in the segments
      glyph. Set -split_on_cigar=>1 when creating the track in order to activate this feature.

1.993 Thu Dec  3 06:36:06 EST 2009
      - Fixed issue which caused GD::SVG rendering of xyplot glyph to show scale
      but no values under some circumstances.

1.992 Wed Nov 18 13:06:07 EST 2009
      - Fixed issue in which the connector vanishes when zoomed in to
        the region between two parts (such as the region between two
        exons)

1.991 Mon Nov 16 09:20:18 EST 2009
      - CPAN upload failed due to lack of $VERSION in hybrid_plot. Uploaded again.
1.99 Mon Nov 16 08:15:23 EST 2009  