@@ -58,22 +58,24 @@ sub draw_connectors {
 
   ($first,$last) = ($last,$first) if exists $self->{flip};
 
-  if ($strand >= 0) {
-    my($x1,$y1,$x2,$y2) = $last->bounds(@_);
-    my $center = ($y2+$y1)/2;
-    $self->{flip} ?
-	$self->arrow($gd,$x1,$x1-$self->arrow_length,$center)
-      :
-	$self->arrow($gd,$x2,$x2+$self->arrow_length,$center);
-  }
+  if ($self->stranded) {
+      if ($strand >= 0) {
+	  my($x1,$y1,$x2,$y2) = $last->bounds(@_);
+	  my $center = ($y2+$y1)/2;
+	  $self->{flip} ?
+	      $self->arrow($gd,$x1,$x1-$self->arrow_length,$center)
+	      :
+	      $self->arrow($gd,$x2,$x2+$self->arrow_length,$center);
+      }
 
-  elsif ($strand < 0) {
-    my($x1,$y1,$x2,$y2) = $first->bounds(@_);
-    my $center = ($y2+$y1)/2;
-    $self->{flip } ?
-	$self->arrow($gd,$x2,$x2+$self->arrow_length,$center)
-      :
-	$self->arrow($gd,$x1,$x1 - $self->arrow_length,$center);
+      elsif ($strand < 0) {
+	  my($x1,$y1,$x2,$y2) = $first->bounds(@_);
+	  my $center = ($y2+$y1)/2;
+	  $self->{flip } ?
+	      $self->arrow($gd,$x2,$x2+$self->arrow_length,$center)
+	      :
+	      $self->arrow($gd,$x1,$x1 - $self->arrow_length,$center);
+      }
   }
 }
 
