@@ -3,6 +3,14 @@ Revision history for Perl extension Bio::Graphics.
 2.02 Sun Mar 14 18:44:04 EDT 2010
      - Added a wiggle_whiskers glyph that works nicely with BigWig and
        BigBed data.
+     - Fixed processed_transcript (and gene) glyphs so that thin UTRs are more attractive.
+     - Fixed the behavior of transcript arrows to be more customizable and not to get
+       too large.
+     - Segments glyph now shows mismatches when zoomed out and -show_mismatches is true.
+     - Added an -indel_color option to segments glyph to show indels in a different color
+       from simple nucleotide substitutions.
+     - Added a -mismatch_only option to segments glyph that only shows mismatching base
+       pairs when zoomed in.
 
 2.01 Thu Feb 25 16:46:08 EST 2010
      - Fixed display of alignments that have hard-clipping in their CIGAR strings.
